--- a/bits-bytestring.cabal
+++ b/bits-bytestring.cabal
@@ -16,7 +16,7 @@ cabal-version:          >=1.10
 
 library
   hs-source-dirs:       src
-  ghc-options:          -Wall
+  ghc-options:          -Wall -O2
   exposed-modules:      Data.Bits.ByteString
   build-depends:        base >= 4.7 && < 5,
                         bits,
