--- a/bits-bytestring.cabal
+++ b/bits-bytestring.cabal
@@ -31,6 +31,7 @@ test-suite bits-bytestring-test
                         bits,
                         bits-bytestring,
                         bytestring,
+                        hspec,
                         QuickCheck
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   default-language:     Haskell2010
