--- a/bits-bytestring.cabal
+++ b/bits-bytestring.cabal
@@ -36,6 +36,17 @@ test-suite bits-bytestring-test
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   default-language:     Haskell2010
 
+benchmark bits-bytestring-bench
+  type:                 exitcode-stdio-1.0
+  hs-source-dirs:       bench
+  main-is:              BenchmarkSuite.hs
+  build-depends:        base,
+                        bytestring,
+                        criterion,
+                        bits-bytestring
+  ghc-options:          -Wall -O2
+  default-language:     Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/oldmanmike/bits-bytestring
