--- a/bits-bytestring-lazy.cabal
+++ b/bits-bytestring-lazy.cabal
@@ -17,7 +17,7 @@ cabal-version:          >=1.10
 library
   hs-source-dirs:       src
   ghc-options:          -Wall
-  exposed-modules:      Data.Bits.ByteString
+  exposed-modules:      Data.Bits.ByteString.Lazy
   build-depends:        base >= 4.7 && < 5,
                         bits,
                         bytestring
